final commit with decks

--- a/deck.html
+++ b/deck.html
@@ -4,16 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Number Facts</title>
+  <link rel="stylesheet" href="deck.css">
 </head>
 <body>
+  <button>Gimme a card!</button>
 
   <div id="response">
 
   </div>
 
+  
   <script src="https://unpkg.com/jquery"></script>
   <script src="https://unpkg.com/axios/dist/axios.js"></script>
-  <script src="app.js"></script>
   <script src="deck.js"></script>
 </body>
 </html>
